Vim swapit lisätty gitignoreen

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,12 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-/*/.swp
+
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
 
 /node_modules
 /yarn-error.log
