Ensimmäinen toimiva versio peliraportista missä voi jopa valita voittajan

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,7 @@ Metrics/LineLength:
 
 FrozenStringLiteralComment:
   Enabled: false
+
+Style/ConditionalAssignment:
+  EnforcedStyle: assign_to_condition
+
